--- a/public/styles.css
+++ b/public/styles.css
@@ -2,7 +2,20 @@ body {
     background-color: #36393e;
 }
 
-h1 {
+h1, p {
     color: #ffffff;
     text-align: center;
 }
+
+table, th, td {
+    border:1px solid #36393e;
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+th, td {
+    background-color: #1459a8;
+    padding: 30px;
+}
+
