--- a/public/styles.css
+++ b/public/styles.css
@@ -19,3 +19,26 @@ th, td {
     padding: 30px;
 }
 
+.cycles {
+    background-color: #a3a3a3;
+    border-radius: 4px;
+    color: #000000;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.cycles:hover {
+    background-color: #ffc72a; /* Green */
+}
+
+/*
+.c2 {background-color: #807e09;}
+.c3 {background-color: #0000ff;}
+.c4 {background-color: #00ff00;}
+.c5 {background-color: #ff0000;} */
+
