--- a/public/styles.css
+++ b/public/styles.css
@@ -7,6 +7,14 @@ h1, p {
     text-align: center;
 }
 
+.linebreak {
+    margin: 0 auto;
+    width: 60%;
+    height: 10px;
+    border-top: 3px groove #ffc72a;
+    line-height: 80%;
+}
+
 table, th, td {
     border:1px solid #36393e;
     color: white;
@@ -19,6 +27,22 @@ th, td {
     padding: 30px;
 }
 
+.halls {
+    background-color: #a3a3a3;
+    border-radius: 4px;
+    color: #000000;
+    padding: 30px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.halls:hover {
+    background-color: #ffc72a; 
+}
 .cycles {
     background-color: #a3a3a3;
     border-radius: 4px;
@@ -33,7 +57,7 @@ th, td {
 }
 
 .cycles:hover {
-    background-color: #ffc72a; /* Green */
+    background-color: #ffc72a; 
 }
 
 /*
@@ -41,4 +65,3 @@ th, td {
 .c3 {background-color: #0000ff;}
 .c4 {background-color: #00ff00;}
 .c5 {background-color: #ff0000;} */
-
